# MultithreadedMergeSort

./: CMakeLists.txt
include/: parallel_sort.hpp  parallel_sort.inl
src/: main.cpp
